<resources>
    <string name="app_name">SaveQr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="ou">Ou</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="perdeu_a_senha">Perdeu a senha?</string>
    <string name="registar">Registar</string>
    <string name="guardar_credenciais">Guardar credênciais</string>
    <string name="username">Username</string>
    <string name="telemovel">Telemóvel</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="adicionar_nova_pasta">Adicionar nova pasta</string>
    <string name="lista_pasta">Listar Pasta</string>
    <string name="lqr">Listar QR - Code</string>
    <string name="dqrcode">Detalhes QR - Code</string>
    <string name="s_conx_int">Sem conexão internet</string>
    <string name="sharedLogin">sharedLogin</string>
    <string name="idLogin">idlog</string>
    <string name="userLogin">userlog</string>
    <string name="login_p" />
    <string name="login_shared" />
    <string name="id_utilizador" />
    <string name="status" />
    <string name="qr_hint">lerqr_hint</string>
    <string name="search">search</string>
    <string name="copy">copiar</string>
    <string name="share">partilhar</string>
    <string name="text_copied">Copiado!</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="flashlight_turned_off">Flash Desligado</string>
    <string name="flashlight_turned_on">Flash Ligado</string>
    <string name="privacy_policy" >privacy_policy</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="gravar">Gravar</string>



    <string name="permission_camera_rationale">Camera permission is needed to proceed.</string>
    <string name="tool_qr_code_stamp">QR code</string>
    <string name="tool_barcode_stamp">Barcode</string>
    <string name="tool_barcode_scanner_stamp">Barcode scanner</string>
    <string name="tool_barcode_tap_toast">Tap to place barcode.</string>
    <string name="tool_select_region">Select region</string>

    <string name="barcode_dialog_hint">Type to generate barcode</string>

</resources>
