<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_listapasta">




    <fragment
        android:id="@+id/nav_listapasta"
        android:name="ipvc.estg.saveqr.ui.listapasta.ListaPastaFragment"
        android:label="@string/lista_pasta"
        tools:layout="@layout/fragment_listapasta" />

    <fragment
        android:id="@+id/nav_listaQrFragment"
        android:name="ipvc.estg.saveqr.ui.listaqr.ListaQrFragment"
        android:label="@string/lqr"
        tools:layout="@layout/lista_q_r_fragment" />
    <fragment
        android:id="@+id/nav_addQrUpdate"
        android:name="ipvc.estg.saveqr.ui.addqrupdate.AddQrUpdate"
        android:label="@string/lqr"
        tools:layout="@layout/add_qr_update_fragment" />
    <fragment
        android:id="@+id/nav_detalhesQR"
        android:name="ipvc.estg.saveqr.ui.detalhesQR.DetalhesQR"
        android:label="@string/dqrcode"
        tools:layout="@layout/detalhes_q_r_fragment" />


</navigation>