<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">
      <TextView
        android:id="@+id/ou2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/ou"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="@+id/line"
        app:layout_constraintStart_toStartOf="@+id/line4"
        app:layout_constraintTop_toBottomOf="@+id/perderSenha" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/container_editview"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/logo"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/container_editview"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <TextView
        android:id="@+id/perderSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/perdeu_a_senha"
        android:textColor="@color/Blue"
        android:textColorHighlight="#000000"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/guardar" />

    <TextView
        android:id="@+id/registar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/registar"
        android:textColor="@color/Blue"
        android:textColorHighlight="#000000"
        app:layout_constraintStart_toStartOf="@+id/guardar"
        app:layout_constraintTop_toBottomOf="@+id/guardar" />

    <CheckBox
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/guardar_credenciais"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/line4"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/registar" />

    <TextView
        android:id="@+id/line"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/perderSenha" />

    <TextView
        android:id="@+id/line2"
        android:layout_width="2dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:background="@android:color/background_dark"
        app:layout_constraintEnd_toStartOf="@+id/perderSenha"
        app:layout_constraintStart_toEndOf="@+id/registar"
        app:layout_constraintTop_toBottomOf="@+id/guardar" />

    <ImageView
        android:id="@+id/add"
        android:onClick="login"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/container_editview"
        android:src="@drawable/ic_chevron_right_black_24dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="@+id/guardar"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toEndOf="@+id/guardar"
        app:layout_constraintTop_toTopOf="@+id/guardar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/face"
        app:layout_constraintStart_toStartOf="@+id/line4"
        app:layout_constraintTop_toBottomOf="@+id/ou2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/line" />


</androidx.constraintlayout.widget.ConstraintLayout>